@startuml Modelo de Datos
entity Cliente {
    * id: number
    --
    * name: string
    * email: string
    phone: string
    created_at: date
}

entity Producto {
    * id: number
    --
    * name: string
    * price: number
    * stock: number
}

entity Venta {
    * id: number
    --
    * client_id: number
    * total: number
    * created_at: date
}

entity VentaDetalle {
    * id: number
    --
    * sale_id: number
    * product_id: number
    * quantity: number
    * subtotal: number
}

Cliente ||--o{ Venta
Venta ||--|{ VentaDetalle
Producto ||--o{ VentaDetalle

@enduml